force-app/main/default/objects/IndividualApplication/fields/AdmittedToPracticeLaw__c.field-meta.xml
<CustomField>
    <fullName>AdmittedToPracticeLaw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admitted To PracticeLaw</label>
    <type>Checkbox</type>
</CustomField>