force-app/main/default/objects/IndividualApplication/fields/ALDParalegalDegreeName__c.field-meta.xml
<CustomField>
    <fullName>ALDParalegalDegreeName__c</fullName>
    <label>ALD Paralegal Name of Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>