force-app/main/default/objects/IndividualApplication/fields/ALDParalegalInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>ALDParalegalInstitutionName__c</fullName>
    <label>ALD Paralegal Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>