force-app/main/default/objects/IndividualApplication/fields/Alias_Name_1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name_1_Reason__c</fullName>
    <label>Alias Name 1 Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>