force-app/main/default/objects/IndividualApplication/fields/Alias_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name_3__c</fullName>
    <label>Alias Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>