force-app/main/default/objects/IndividualApplication/fields/Alias_Name_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name_3_Date__c</fullName>
    <label>Alias Name 3 Date</label>
    <type>Date</type>
</CustomField>