force-app/main/default/objects/IndividualApplication/fields/Applicant_Cellphone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Cellphone__c</fullName>
    <label>Applicant Cellphone</label>
    <type>Phone</type>
</CustomField>