force-app/main/default/objects/IndividualApplication/fields/Applicant_Fax__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Fax__c</fullName>
    <label>Applicant Fax</label>
    <type>Phone</type>
</CustomField>