force-app/main/default/objects/IndividualApplication/fields/Applicant_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Home_Address__c</fullName>
    <label>Applicant Home Address</label>
    <type>Address</type>
</CustomField>