force-app/main/default/objects/IndividualApplication/fields/Applicant_Home_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Home_Address_Formula__c</fullName>
    <formula>IF(
    ISBLANK(Applicant_Home_Address__Street__s),
    &apos;&apos;,
    Applicant_Home_Address__Street__s &amp;
    BR() &amp;
    Applicant_Home_Address__City__s &amp; &apos;, &apos; &amp;
    TEXT(Applicant_Home_Address__StateCode__s) &amp; &apos; &apos; &amp;
    Applicant_Home_Address__PostalCode__s
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Home Address Formula</label>
    <type>Text</type>
</CustomField>