force-app/main/default/objects/IndividualApplication/fields/Applicant_Official_Freelance__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Official_Freelance__c</fullName>
    <label>Applicant Official or Freelance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>