force-app/main/default/objects/IndividualApplication/fields/AppliedToExamtake__c.field-meta.xml
<CustomField>
    <fullName>AppliedToExamtake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied to take AB Exam</label>
    <type>Checkbox</type>
</CustomField>