force-app/main/default/objects/IndividualApplication/fields/Are_you_self_employed__c.field-meta.xml
<CustomField>
    <fullName>Are_you_self_employed__c</fullName>
    <label>Are you self-employed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>