force-app/main/default/objects/IndividualApplication/fields/Arizona_Residency_Date__c.field-meta.xml
<CustomField>
    <fullName>Arizona_Residency_Date__c</fullName>
    <label>Arizona Residency Date</label>
    <type>Date</type>
</CustomField>