force-app/main/default/objects/IndividualApplication/fields/Assigned_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Entity_Name__c</fullName>
    <label>Assigned Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>