force-app/main/default/objects/IndividualApplication/fields/Board_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval_Date__c</fullName>
    <label>Board Approval Date</label>
    <type>Date</type>
</CustomField>