force-app/main/default/objects/IndividualApplication/fields/Board_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Meeting_Date__c</fullName>
    <label>Board Meeting Date</label>
    <type>Date</type>
</CustomField>