force-app/main/default/objects/IndividualApplication/fields/Business_Cellphone__c.field-meta.xml
<CustomField>
    <fullName>Business_Cellphone__c</fullName>
    <label>Business Cellphone Number</label>
    <type>Phone</type>
</CustomField>