force-app/main/default/objects/IndividualApplication/fields/Business_Entity_AZCLDP__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_AZCLDP__c</fullName>
    <label>Business Entity AZCLDP #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>