force-app/main/default/objects/IndividualApplication/fields/Business_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Home_Address__c</fullName>
    <label>Business Home Address</label>
    <type>Address</type>
</CustomField>