force-app/main/default/objects/IndividualApplication/fields/Business_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Business_Telephone__c</fullName>
    <label>Business Telephone Number</label>
    <type>Phone</type>
</CustomField>