force-app/main/default/objects/IndividualApplication/fields/CertificateinCertificateName__c.field-meta.xml
<CustomField>
    <fullName>CertificateinCertificateName__c</fullName>
    <label>Certificate in Name of Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>