force-app/main/default/objects/IndividualApplication/fields/CertificateinDegreeName__c.field-meta.xml
<CustomField>
    <fullName>CertificateinDegreeName__c</fullName>
    <label>Certificate in Name of Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>