force-app/main/default/objects/IndividualApplication/fields/CertificateinInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>CertificateinInstitutionName__c</fullName>
    <label>Certificate in Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>