force-app/main/default/objects/IndividualApplication/fields/Certified_as_LDP_or_cert_pending__c.field-meta.xml
<CustomField>
    <fullName>Certified_as_LDP_or_cert_pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business entity certified as LDP or pend</label>
    <type>Checkbox</type>
</CustomField>