force-app/main/default/objects/IndividualApplication/fields/Citizenship_Residence_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Residence_Status__c</fullName>
    <label>Citizenship Residence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>