force-app/main/default/objects/IndividualApplication/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company/Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>