force-app/main/default/objects/IndividualApplication/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>If yes, name of company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>