force-app/main/default/objects/IndividualApplication/fields/DeniedAdmissionLawTo__c.field-meta.xml
<CustomField>
    <fullName>DeniedAdmissionLawTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>denied admission to practice of law</label>
    <type>Checkbox</type>
</CustomField>