force-app/main/default/objects/IndividualApplication/fields/DisbarredPracticeSuspended__c.field-meta.xml
<CustomField>
    <fullName>DisbarredPracticeSuspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disbarred or suspended from the practice</label>
    <type>Checkbox</type>
</CustomField>