force-app/main/default/objects/IndividualApplication/fields/Disposition_of_Adversarial_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Disposition_of_Adversarial_Action_Taken__c</fullName>
    <label>Disposition of Adversarial Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>