force-app/main/default/objects/IndividualApplication/fields/Employer_Email__c.field-meta.xml
<CustomField>
    <fullName>Employer_Email__c</fullName>
    <label>Employer Email</label>
    <type>Email</type>
</CustomField>