force-app/main/default/objects/IndividualApplication/fields/Employer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Employer_Fax__c</fullName>
    <label>Employer Fax</label>
    <type>Phone</type>
</CustomField>