force-app/main/default/objects/IndividualApplication/fields/Employer_Work_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Work_Address__c</fullName>
    <label>Work Address</label>
    <type>Address</type>
</CustomField>