force-app/main/default/objects/IndividualApplication/fields/Endorsement_Subject_Matter__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Subject_Matter__c</fullName>
    <label>Endorsement Subject Matter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Law Subject Matter</fullName>
            </value>
            <value>
                <fullName>Civil Law Subject Matter</fullName>
            </value>
            <value>
                <fullName>Criminal Law Subject Matter</fullName>
            </value>
            <value>
                <fullName>Family Law Subject Matter</fullName>
            </value>
            <value>
                <fullName>Juvenile Law Subject Matter</fullName>
            </value>
            <value>
                <fullName>Probate Law Subject Matter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>