force-app/main/default/objects/IndividualApplication/fields/FourYearInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>FourYearInstitutionName__c</fullName>
    <label>Four Year Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>