force-app/main/default/objects/IndividualApplication/fields/From_mm_yy__c.field-meta.xml
<CustomField>
    <fullName>From_mm_yy__c</fullName>
    <label>From (mm/yy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>