force-app/main/default/objects/IndividualApplication/fields/FullTimeRelatedSubstantive__c.field-meta.xml
<CustomField>
    <fullName>FullTimeRelatedSubstantive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full-Time Substantive Law-Related</label>
    <type>Checkbox</type>
</CustomField>