force-app/main/default/objects/IndividualApplication/fields/HadAnyChargesComplaint__c.field-meta.xml
<CustomField>
    <fullName>HadAnyChargesComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had Any Charges Complaint</label>
    <type>Checkbox</type>
</CustomField>