force-app/main/default/objects/IndividualApplication/fields/HadCreditCard__c.field-meta.xml
<CustomField>
    <fullName>HadCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had Credit Card</label>
    <type>Checkbox</type>
</CustomField>