force-app/main/default/objects/IndividualApplication/fields/HadPerformanceDischarge__c.field-meta.xml
<CustomField>
    <fullName>HadPerformanceDischarge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had Performance Discharge</label>
    <type>Checkbox</type>
</CustomField>