force-app/main/default/objects/IndividualApplication/fields/HasABANameOfCertificate__c.field-meta.xml
<CustomField>
    <fullName>HasABANameOfCertificate__c</fullName>
    <label>ABA Name of Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>