force-app/main/default/objects/IndividualApplication/fields/HasABANameOfInstitution__c.field-meta.xml
<CustomField>
    <fullName>HasABANameOfInstitution__c</fullName>
    <label>ABA Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>