force-app/main/default/objects/IndividualApplication/fields/HasActConstituteMaterial__c.field-meta.xml
<CustomField>
    <fullName>HasActConstituteMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Act Constitute Material</label>
    <type>Checkbox</type>
</CustomField>