force-app/main/default/objects/IndividualApplication/fields/HasAJCDateCompleted__c.field-meta.xml
<CustomField>
    <fullName>HasAJCDateCompleted__c</fullName>
    <label>AJC Date Completed</label>
    <type>Date</type>
</CustomField>