force-app/main/default/objects/IndividualApplication/fields/HasAJCNameOfInstitution__c.field-meta.xml
<CustomField>
    <fullName>HasAJCNameOfInstitution__c</fullName>
    <label>AJC Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>