force-app/main/default/objects/IndividualApplication/fields/HasALDInParalegalStudies__c.field-meta.xml
<CustomField>
    <fullName>HasALDInParalegalStudies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALD in paralegal studies</label>
    <type>Checkbox</type>
</CustomField>