force-app/main/default/objects/IndividualApplication/fields/HasApprovedByTheABA__c.field-meta.xml
<CustomField>
    <fullName>HasApprovedByTheABA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by the ABA</label>
    <type>Checkbox</type>
</CustomField>