force-app/main/default/objects/IndividualApplication/fields/HasApprovedByTheAJC__c.field-meta.xml
<CustomField>
    <fullName>HasApprovedByTheAJC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by the AJC</label>
    <type>Checkbox</type>
</CustomField>