force-app/main/default/objects/IndividualApplication/fields/HasArizonaDriverLicense__c.field-meta.xml
<CustomField>
    <fullName>HasArizonaDriverLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Arizona Driver License</label>
    <type>Checkbox</type>
</CustomField>