force-app/main/default/objects/IndividualApplication/fields/HasBachelorOfArtsOrScienceDegree__c.field-meta.xml
<CustomField>
    <fullName>HasBachelorOfArtsOrScienceDegree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Bachelor of Arts or Science degree</label>
    <type>Checkbox</type>
</CustomField>