force-app/main/default/objects/IndividualApplication/fields/HasBarAccreditedLawSchoolDegree__c.field-meta.xml
<CustomField>
    <fullName>HasBarAccreditedLawSchoolDegree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Bar accredited Law School Degree</label>
    <type>Checkbox</type>
</CustomField>