force-app/main/default/objects/IndividualApplication/fields/HasBarApprovedCompletionCertificate__c.field-meta.xml
<CustomField>
    <fullName>HasBarApprovedCompletionCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Bar approved completion certificate</label>
    <type>Checkbox</type>
</CustomField>