force-app/main/default/objects/IndividualApplication/fields/HasBeenAccusedViolatingRules__c.field-meta.xml
<CustomField>
    <fullName>HasBeenAccusedViolatingRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Accused Violating Rules</label>
    <type>Checkbox</type>
</CustomField>