force-app/main/default/objects/IndividualApplication/fields/HasBeenAnAdult__c.field-meta.xml
<CustomField>
    <fullName>HasBeenAnAdult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atleast 18 years of age</label>
    <type>Checkbox</type>
</CustomField>