force-app/main/default/objects/IndividualApplication/fields/HasBeenAnUSCitizen__c.field-meta.xml
<CustomField>
    <fullName>HasBeenAnUSCitizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a citizen of the United States</label>
    <type>Checkbox</type>
</CustomField>