force-app/main/default/objects/IndividualApplication/fields/HasBeenCertificationInfo__c.field-meta.xml
<CustomField>
    <fullName>HasBeenCertificationInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been in Certification Information</label>
    <type>Checkbox</type>
</CustomField>