force-app/main/default/objects/IndividualApplication/fields/HasBeenContactedByCourt__c.field-meta.xml
<CustomField>
    <fullName>HasBeenContactedByCourt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been contacted by court</label>
    <type>Checkbox</type>
</CustomField>