force-app/main/default/objects/IndividualApplication/fields/HasBeenDefendantOrRespondentInCivilCase__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDefendantOrRespondentInCivilCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been defendant or respondent</label>
    <type>Checkbox</type>
</CustomField>