force-app/main/default/objects/IndividualApplication/fields/HasBeenDischargedResigned__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDischargedResigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Discharged Resigned</label>
    <type>Checkbox</type>
</CustomField>