force-app/main/default/objects/IndividualApplication/fields/HasBeenDisciplinedInEmployment__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDisciplinedInEmployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Disciplined In Employment</label>
    <type>Checkbox</type>
</CustomField>