force-app/main/default/objects/IndividualApplication/fields/HasBeenDivisionStaffStatement__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDivisionStaffStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Division Staff Statement</label>
    <type>Checkbox</type>
</CustomField>