force-app/main/default/objects/IndividualApplication/fields/HasBeenExpelledSuspendedDisciplined__c.field-meta.xml
<CustomField>
    <fullName>HasBeenExpelledSuspendedDisciplined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Expelled Suspended Disciplined</label>
    <type>Checkbox</type>
</CustomField>