force-app/main/default/objects/IndividualApplication/fields/HasBeenFailedToPetition__c.field-meta.xml
<CustomField>
    <fullName>HasBeenFailedToPetition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Failed To Petition</label>
    <type>Checkbox</type>
</CustomField>