force-app/main/default/objects/IndividualApplication/fields/HasBeenInBusinessTrade__c.field-meta.xml
<CustomField>
    <fullName>HasBeenInBusinessTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been In Business Trade</label>
    <type>Checkbox</type>
</CustomField>