force-app/main/default/objects/IndividualApplication/fields/HasBeenInStatementVerifySupport__c.field-meta.xml
<CustomField>
    <fullName>HasBeenInStatementVerifySupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been In Statement Verify Support</label>
    <type>Checkbox</type>
</CustomField>