force-app/main/default/objects/IndividualApplication/fields/HasBeenIntendToFile__c.field-meta.xml
<CustomField>
    <fullName>HasBeenIntendToFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Intend To File</label>
    <type>Checkbox</type>
</CustomField>