force-app/main/default/objects/IndividualApplication/fields/HasBeenInvolvedAsParty__c.field-meta.xml
<CustomField>
    <fullName>HasBeenInvolvedAsParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Involved As Party</label>
    <type>Checkbox</type>
</CustomField>