force-app/main/default/objects/IndividualApplication/fields/HasBeenOrCurrentlyAssigned__c.field-meta.xml
<CustomField>
    <fullName>HasBeenOrCurrentlyAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been or currently assigned</label>
    <type>Checkbox</type>
</CustomField>