force-app/main/default/objects/IndividualApplication/fields/HasBeenReprimandedCensured__c.field-meta.xml
<CustomField>
    <fullName>HasBeenReprimandedCensured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Reprimanded Censured</label>
    <type>Checkbox</type>
</CustomField>