force-app/main/default/objects/IndividualApplication/fields/HasBeenResidentOfArizona__c.field-meta.xml
<CustomField>
    <fullName>HasBeenResidentOfArizona__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been Resident of AZ State</label>
    <type>Checkbox</type>
</CustomField>