force-app/main/default/objects/IndividualApplication/fields/HasBeenSanctionedByCourt__c.field-meta.xml
<CustomField>
    <fullName>HasBeenSanctionedByCourt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been sanctioned by Court</label>
    <type>Checkbox</type>
</CustomField>