force-app/main/default/objects/IndividualApplication/fields/HasBeenSubjectedByCourt__c.field-meta.xml
<CustomField>
    <fullName>HasBeenSubjectedByCourt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been subjected by court</label>
    <type>Checkbox</type>
</CustomField>