force-app/main/default/objects/IndividualApplication/fields/HasBeenSubjectOfHearing__c.field-meta.xml
<CustomField>
    <fullName>HasBeenSubjectOfHearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Subject Of Hearing</label>
    <type>Checkbox</type>
</CustomField>