force-app/main/default/objects/IndividualApplication/fields/HasCertificateInDateObtained__c.field-meta.xml
<CustomField>
    <fullName>HasCertificateInDateObtained__c</fullName>
    <label>Certificate in Date Obtained</label>
    <type>Date</type>
</CustomField>