force-app/main/default/objects/IndividualApplication/fields/HasCertificateInParalegalStudies__c.field-meta.xml
<CustomField>
    <fullName>HasCertificateInParalegalStudies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate in Paralegal Studies</label>
    <type>Checkbox</type>
</CustomField>