force-app/main/default/objects/IndividualApplication/fields/HasCertifiedInOtherStates__c.field-meta.xml
<CustomField>
    <fullName>HasCertifiedInOtherStates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been certified in other state</label>
    <type>Checkbox</type>
</CustomField>