force-app/main/default/objects/IndividualApplication/fields/HasClaimedAnInterest__c.field-meta.xml
<CustomField>
    <fullName>HasClaimedAnInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Claimed An Interest</label>
    <type>Checkbox</type>
</CustomField>