force-app/main/default/objects/IndividualApplication/fields/HasCommittedBusinessFraud__c.field-meta.xml
<CustomField>
    <fullName>HasCommittedBusinessFraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed Business Fraud</label>
    <type>Checkbox</type>
</CustomField>