force-app/main/default/objects/IndividualApplication/fields/HasCommittedMisrepresentation__c.field-meta.xml
<CustomField>
    <fullName>HasCommittedMisrepresentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed Misrepresentation</label>
    <type>Checkbox</type>
</CustomField>