force-app/main/default/objects/IndividualApplication/fields/HasCompletedHours__c.field-meta.xml
<CustomField>
    <fullName>HasCompletedHours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Completed Required Hours for Renewal</label>
    <type>Checkbox</type>
</CustomField>