force-app/main/default/objects/IndividualApplication/fields/HasCompletionCertUnapprovedByBar__c.field-meta.xml
<CustomField>
    <fullName>HasCompletionCertUnapprovedByBar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has completion cert unapproved by Bar</label>
    <type>Checkbox</type>
</CustomField>