force-app/main/default/objects/IndividualApplication/fields/HasCourseInAnyEmployment__c.field-meta.xml
<CustomField>
    <fullName>HasCourseInAnyEmployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Course In Any Employment</label>
    <type>Checkbox</type>
</CustomField>