force-app/main/default/objects/IndividualApplication/fields/HasCriminalSummonQuestion__c.field-meta.xml
<CustomField>
    <fullName>HasCriminalSummonQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Criminal Summon Question</label>
    <type>Checkbox</type>
</CustomField>