force-app/main/default/objects/IndividualApplication/fields/HasEmploymentDiscipline__c.field-meta.xml
<CustomField>
    <fullName>HasEmploymentDiscipline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Discipline</label>
    <type>Checkbox</type>
</CustomField>