force-app/main/default/objects/IndividualApplication/fields/HasEverFailedMeetFinancial__c.field-meta.xml
<CustomField>
    <fullName>HasEverFailedMeetFinancial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ever Failed Meet Financial</label>
    <type>Checkbox</type>
</CustomField>