force-app/main/default/objects/IndividualApplication/fields/HasFailedToComplyAnyCourt__c.field-meta.xml
<CustomField>
    <fullName>HasFailedToComplyAnyCourt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Failed To Comply Any Court</label>
    <type>Checkbox</type>
</CustomField>