force-app/main/default/objects/IndividualApplication/fields/HasFailedToRespond__c.field-meta.xml
<CustomField>
    <fullName>HasFailedToRespond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed To Respond</label>
    <type>Checkbox</type>
</CustomField>