force-app/main/default/objects/IndividualApplication/fields/HasFalseSupportStatement__c.field-meta.xml
<CustomField>
    <fullName>HasFalseSupportStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>False Support Statement</label>
    <type>Checkbox</type>
</CustomField>