force-app/main/default/objects/IndividualApplication/fields/HasFourYearDateObtained__c.field-meta.xml
<CustomField>
    <fullName>HasFourYearDateObtained__c</fullName>
    <label>Four Year Date Obtained</label>
    <type>Date</type>
</CustomField>